syntax = "proto3";

// Generate Go:
// protoc --go_out=plugins=grpc:. *.proto

package protos;

service Doit {
  rpc Register (RegisterRequest) returns (RegisterReply) {}
}

message RegisterRequest {
  string name = 1;
  string address = 2;
}

message RegisterReply {
  bool success = 1;
}
